# FLP_Task_03

./: CHANGELOG.md  Task03.cabal  db.sqlite
app/: Main.hs
