cabal-version:      2.4
name:               Task03
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Eruslanovs
maintainer:         some@mail.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Task03
    main-is:          Main.hs
    data-files:       sqlite3.exe

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base , directory, process,sqlite-simple
    hs-source-dirs:   app
    default-language: Haskell2010
